--- a/index.html
+++ b/index.html
@@ -366,111 +366,100 @@
           <div class="col-lg-6">
             <div class="cv_edu_exp">
               <div class="cv_edu_exp_box mb-3 pb-3 border-bottom">
-                <div class="d-flex justify-content-between align-items-start">
-                  <div class="flex-grow-1">
-                    <h5 class="mb-1 font-weight-bold">
-                      Software Engineer - Backend
-                    </h5>
-                    <p class="mb-1 text-muted">MATT3R</p>
-                    <p class="mb-1 small text-muted">
-                      Vancouver, BC, Canada - Remote
-                    </p>
-                    <p class="mb-0 small text-muted">
-                      <em
-                        >Python, Bash, AWS, Prometheus, DynamoDB, Redis,
-                        Jenkins, Serverless, Docker, BLE, Git</em
-                      >
-                    </p>
-                  </div>
-                  <span class="text-custom font-weight-bold ml-3"
-                    >2023-02 - Present</span
-                  >
+                <div>
+                  <p class="mb-1 text-custom font-weight-bold">
+                    2023-02 - Present
+                  </p>
+                  <h5 class="mb-1 font-weight-bold">
+                    Software Engineer - Backend
+                  </h5>
+                  <p class="mb-1 text-muted">MATT3R</p>
+                  <p class="mb-1 small text-muted">
+                    Vancouver, BC, Canada - Remote
+                  </p>
+                  <p class="mb-0 small text-muted">
+                    <em
+                      >Python, Bash, AWS, Prometheus, DynamoDB, Redis, Jenkins,
+                      Serverless, Docker, BLE, Git</em
+                    >
+                  </p>
                 </div>
               </div>
 
               <div class="cv_edu_exp_box mb-3 pb-3 border-bottom">
-                <div class="d-flex justify-content-between align-items-start">
-                  <div class="flex-grow-1">
-                    <h5 class="mb-1 font-weight-bold">
-                      ML & DL Course Instructor
-                    </h5>
-                    <p class="mb-1 text-muted">Private Company</p>
-                    <p class="mb-1 small text-muted">
-                      Ahwaz, Khuzestan, Iran - On-site
-                    </p>
-                    <p class="mb-0 small text-muted">
-                      <em
-                        >Python, Deep Learning, Stock Analysis, Image
-                        Processing</em
-                      >
-                    </p>
-                  </div>
-                  <span class="text-custom font-weight-bold ml-3"
-                    >2023-01 - 2023-03</span
-                  >
+                <div>
+                  <p class="mb-1 text-custom font-weight-bold">
+                    2023-01 - 2023-03
+                  </p>
+                  <h5 class="mb-1 font-weight-bold">
+                    ML & DL Course Instructor
+                  </h5>
+                  <p class="mb-1 text-muted">Private Company</p>
+                  <p class="mb-1 small text-muted">
+                    Ahwaz, Khuzestan, Iran - On-site
+                  </p>
+                  <p class="mb-0 small text-muted">
+                    <em
+                      >Python, Deep Learning, Stock Analysis, Image
+                      Processing</em
+                    >
+                  </p>
                 </div>
               </div>
 
               <div class="cv_edu_exp_box mb-3 pb-3 border-bottom">
-                <div class="d-flex justify-content-between align-items-start">
-                  <div class="flex-grow-1">
-                    <h5 class="mb-1 font-weight-bold">
-                      Software Engineer - Backend
-                    </h5>
-                    <p class="mb-1 text-muted">SatPlat</p>
-                    <p class="mb-1 small text-muted">
-                      Tehran, Iran - Hybrid (Sharif University of Technology)
-                    </p>
-                    <p class="mb-0 small text-muted">
-                      <em>Python, Django, Postgres, Docker, Linux, Git</em>
-                    </p>
-                  </div>
-                  <span class="text-custom font-weight-bold ml-3"
-                    >2022-07 - 2023-02</span
-                  >
+                <div>
+                  <p class="mb-1 text-custom font-weight-bold">
+                    2022-07 - 2023-02
+                  </p>
+                  <h5 class="mb-1 font-weight-bold">
+                    Software Engineer - Backend
+                  </h5>
+                  <p class="mb-1 text-muted">SatPlat</p>
+                  <p class="mb-1 small text-muted">
+                    Tehran, Iran - Hybrid (Sharif University of Technology)
+                  </p>
+                  <p class="mb-0 small text-muted">
+                    <em>Python, Django, Postgres, Docker, Linux, Git</em>
+                  </p>
                 </div>
               </div>
 
               <div class="cv_edu_exp_box mb-3 pb-3 border-bottom">
-                <div class="d-flex justify-content-between align-items-start">
-                  <div class="flex-grow-1">
-                    <h5 class="mb-1 font-weight-bold">
-                      Freelance Software Developer
-                    </h5>
-                    <p class="mb-1 text-muted">Self Employed</p>
-                    <p class="mb-1 small text-muted">
-                      Shiraz, Fars, Iran - Remote
-                    </p>
-                    <p class="mb-0 small text-muted">
-                      <em>Python, Django, Postgres, Websocket, Git</em>
-                    </p>
-                  </div>
-                  <span class="text-custom font-weight-bold ml-3"
-                    >2021-01 - 2022-07</span
-                  >
+                <div>
+                  <p class="mb-1 text-custom font-weight-bold">
+                    2021-01 - 2022-07
+                  </p>
+                  <h5 class="mb-1 font-weight-bold">
+                    Freelance Software Developer
+                  </h5>
+                  <p class="mb-1 text-muted">Self Employed</p>
+                  <p class="mb-1 small text-muted">
+                    Shiraz, Fars, Iran - Remote
+                  </p>
+                  <p class="mb-0 small text-muted">
+                    <em>Python, Django, Postgres, Websocket, Git</em>
+                  </p>
                 </div>
               </div>
 
               <div class="cv_edu_exp_box mb-3">
-                <div class="d-flex justify-content-between align-items-start">
-                  <div class="flex-grow-1">
-                    <h5 class="mb-1 font-weight-bold">
-                      Software Engineer - Backend
-                    </h5>
-                    <p class="mb-1 text-muted">AsrGooyeshPardaz</p>
-                    <p class="mb-1 small text-muted">
-                      Tehran, Iran - On-site (Sharif University of Technology)
-                    </p>
-                    <p class="mb-0 small text-muted">
-                      <em
-                        >Python, Django, Websocket, Java, Postgres, Linux,
-                        Git</em
-                      >
-                    </p>
-                  </div>
-                  <span class="text-custom font-weight-bold ml-3"
-                    >2019-12 - 2021-01</span
-                  >
+                <div>
+                  <p class="mb-1 text-custom font-weight-bold">
+                    2019-12 - 2021-01
+                  </p>
+                  <h5 class="mb-1 font-weight-bold">
+                    Software Engineer - Backend
+                  </h5>
+                  <p class="mb-1 text-muted">AsrGooyeshPardaz</p>
+                  <p class="mb-1 small text-muted">
+                    Tehran, Iran - On-site (Sharif University of Technology)
+                  </p>
+                  <p class="mb-0 small text-muted">
+                    <em
+                      >Python, Django, Websocket, Java, Postgres, Linux, Git</em
+                    >
+                  </p>
                 </div>
               </div>
             </div>
@@ -478,64 +467,58 @@
           <div class="col-lg-6">
             <div class="cv_edu_exp">
               <div class="cv_edu_exp_box mb-3 pb-3 border-bottom">
-                <div class="d-flex justify-content-between align-items-start">
-                  <div class="flex-grow-1">
-                    <h5 class="mb-1 font-weight-bold">BI SQL Developer</h5>
-                    <p class="mb-1 text-muted">Shiraz University</p>
-                    <p class="mb-1 small text-muted">Shiraz, Iran - On-site</p>
-                    <p class="mb-0 small text-muted">
-                      <em>SQL, Apache Zeppelin, Spark, Linux, Git</em>
-                    </p>
-                  </div>
-                  <span class="text-custom font-weight-bold ml-3"
-                    >2019-01 - 2019-07</span
-                  >
+                <div>
+                  <p class="mb-1 text-custom font-weight-bold">
+                    2019-01 - 2019-07
+                  </p>
+                  <h5 class="mb-1 font-weight-bold">BI SQL Developer</h5>
+                  <p class="mb-1 text-muted">Shiraz University</p>
+                  <p class="mb-1 small text-muted">Shiraz, Iran - On-site</p>
+                  <p class="mb-0 small text-muted">
+                    <em>SQL, Apache Zeppelin, Spark, Linux, Git</em>
+                  </p>
                 </div>
               </div>
               <div class="cv_edu_exp_box mb-3 pb-3 border-bottom">
-                <div class="d-flex justify-content-between align-items-start">
-                  <div class="flex-grow-1">
-                    <h5 class="mb-1 font-weight-bold">
-                      MSc in Computer Software Engineering
-                    </h5>
-                    <p class="mb-1 text-muted">Shiraz University</p>
-                    <p class="mb-0 small text-muted">Shiraz, Iran</p>
-                    <p class="mb-0 mt-1 small">GPA: 3.1/4.0</p>
-                    <p class="mb-0 mt-1 small">
-                      Thesis: Human Emotion Analysis on Twitter Data Using Deep
-                      Learning - Grade: A+
-                    </p>
-                    <p class="mb-0 mt-1 small text-muted">
-                      <em>C++, Python, Keras, SQL</em>
-                    </p>
-                  </div>
-                  <span class="text-custom font-weight-bold ml-3"
-                    >2016-09 - 2019-09</span
-                  >
+                <div>
+                  <p class="mb-1 text-custom font-weight-bold">
+                    2016-09 - 2019-09
+                  </p>
+                  <h5 class="mb-1 font-weight-bold">
+                    MSc in Computer Software Engineering
+                  </h5>
+                  <p class="mb-1 text-muted">Shiraz University</p>
+                  <p class="mb-0 small text-muted">Shiraz, Iran</p>
+                  <p class="mb-0 mt-1 small">GPA: 3.1/4.0</p>
+                  <p class="mb-0 mt-1 small">
+                    Thesis: Human Emotion Analysis on Twitter Data Using Deep
+                    Learning - Grade: A+
+                  </p>
+                  <p class="mb-0 mt-1 small text-muted">
+                    <em>C++, Python, Keras, SQL</em>
+                  </p>
                 </div>
               </div>
               <div class="cv_edu_exp_box mb-3">
-                <div class="d-flex justify-content-between align-items-start">
-                  <div class="flex-grow-1">
-                    <h5 class="mb-1 font-weight-bold">
-                      BSc in Computer Hardware Engineering
-                    </h5>
-                    <p class="mb-1 text-muted">
-                      Hamadan University of Technology
-                    </p>
-                    <p class="mb-0 small text-muted">Hamadan, Iran</p>
-                    <p class="mb-0 mt-1 small">GPA: 3.3/4.0</p>
-                    <p class="mb-0 mt-1 small">
-                      Thesis: Developing a Secure Android Chat Application -
-                      Grade: A+
-                    </p>
-                    <p class="mb-0 mt-1 small text-muted">
-                      <em>C++, Java</em>
-                    </p>
-                  </div>
-                  <span class="text-custom font-weight-bold ml-3"
-                    >2012-09 - 2016-09</span
-                  >
+                <div>
+                  <p class="mb-1 text-custom font-weight-bold">
+                    2012-09 - 2016-09
+                  </p>
+                  <h5 class="mb-1 font-weight-bold">
+                    BSc in Computer Hardware Engineering
+                  </h5>
+                  <p class="mb-1 text-muted">
+                    Hamadan University of Technology
+                  </p>
+                  <p class="mb-0 small text-muted">Hamadan, Iran</p>
+                  <p class="mb-0 mt-1 small">GPA: 3.3/4.0</p>
+                  <p class="mb-0 mt-1 small">
+                    Thesis: Developing a Secure Android Chat Application -
+                    Grade: A+
+                  </p>
+                  <p class="mb-0 mt-1 small text-muted">
+                    <em>C++, Java</em>
+                  </p>
                 </div>
               </div>
             </div>
