--- a/index.html
+++ b/index.html
@@ -163,9 +163,11 @@
                 <i class="mdi mdi-asterisk"></i>
               </div>
               <p class="text-muted mx-auto mt-2">
-                I am a software developer based in Shiraz, Iran. Things that
-                excite me are Cryptography, Data Science, Problem Solving,
-                Designing and Game Development.
+                I am a backend software engineer with expertise in cloud
+                infrastructure, embedded systems, and machine learning. I
+                specialize in Python, AWS services, DevOps practices, and
+                building scalable backend solutions for IoT and cloud
+                applications.
               </p>
             </div>
           </div>
@@ -200,58 +202,8 @@
             <div class="progress-bars skill-custom">
               <div class="clearfix">
                 <div class="text-dark font-weight-bold float-left">
-                  Backend Development (RESTful-Websockets-Docker)
+                  Python & Django Backend Development
                 </div>
-                <div class="text-muted float-right">85%</div>
-              </div>
-              <div class="progress">
-                <div
-                  class="progress-bar"
-                  role="progressbar"
-                  style="width: 85%"
-                  aria-valuenow="0"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                ></div>
-              </div>
-              <div class="clearfix">
-                <div class="text-dark font-weight-bold float-left">
-                  Python Development & Related Technologies
-                </div>
-                <div class="text-muted float-right">85%</div>
-              </div>
-              <div class="progress">
-                <div
-                  class="progress-bar"
-                  role="progressbar"
-                  style="width: 85%"
-                  aria-valuenow="25"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                ></div>
-              </div>
-              <div class="clearfix">
-                <div class="text-dark font-weight-bold float-left">
-                  C/C++ Development
-                </div>
-                <div class="text-muted float-right">75%</div>
-              </div>
-              <div class="progress">
-                <div
-                  class="progress-bar"
-                  role="progressbar"
-                  style="width: 75%"
-                  aria-valuenow="0"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                ></div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="progress-bars skill-custom">
-              <div class="clearfix">
-                <div class="text-dark font-weight-bold float-left">English</div>
                 <div class="text-muted float-right">90%</div>
               </div>
               <div class="progress">
@@ -265,14 +217,16 @@
                 ></div>
               </div>
               <div class="clearfix">
-                <div class="text-dark font-weight-bold float-left">SQL</div>
-                <div class="text-muted float-right">70%</div>
+                <div class="text-dark font-weight-bold float-left">
+                  AWS & Cloud Services
+                </div>
+                <div class="text-muted float-right">85%</div>
               </div>
               <div class="progress">
                 <div
                   class="progress-bar"
                   role="progressbar"
-                  style="width: 70%"
+                  style="width: 85%"
                   aria-valuenow="25"
                   aria-valuemin="0"
                   aria-valuemax="100"
@@ -280,15 +234,67 @@
               </div>
               <div class="clearfix">
                 <div class="text-dark font-weight-bold float-left">
-                  Deep Learning & AI (Keras)
+                  DevOps & CI/CD (Docker, Jenkins, Serverless)
                 </div>
-                <div class="text-muted float-right">60%</div>
+                <div class="text-muted float-right">85%</div>
               </div>
               <div class="progress">
                 <div
                   class="progress-bar"
                   role="progressbar"
-                  style="width: 60%"
+                  style="width: 85%"
+                  aria-valuenow="0"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="progress-bars skill-custom">
+              <div class="clearfix">
+                <div class="text-dark font-weight-bold float-left">
+                  Embedded Systems & IoT (BLE, Linux)
+                </div>
+                <div class="text-muted float-right">80%</div>
+              </div>
+              <div class="progress">
+                <div
+                  class="progress-bar"
+                  role="progressbar"
+                  style="width: 80%"
+                  aria-valuenow="0"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+              <div class="clearfix">
+                <div class="text-dark font-weight-bold float-left">
+                  Machine Learning & Deep Learning
+                </div>
+                <div class="text-muted float-right">75%</div>
+              </div>
+              <div class="progress">
+                <div
+                  class="progress-bar"
+                  role="progressbar"
+                  style="width: 75%"
+                  aria-valuenow="25"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+              <div class="clearfix">
+                <div class="text-dark font-weight-bold float-left">
+                  SQL & Database Management
+                </div>
+                <div class="text-muted float-right">80%</div>
+              </div>
+              <div class="progress">
+                <div
+                  class="progress-bar"
+                  role="progressbar"
+                  style="width: 80%"
                   aria-valuenow="0"
                   aria-valuemin="0"
                   aria-valuemax="100"
